# jc_toolkit

./: CMakeLists.txt  JoyConProtocol.cpp  JoyConProtocol.h  spi.h
.github/workflows/: build.yml
cli/: CMakeLists.txt  main.cpp
include/: JoyConDevice.h
jctool/: jctool.h
libjctool/: CMakeLists.txt  Calibration.cpp  Calibration.h  JoyConDevice.cpp  JoyConDevice.h  JoyConProtocol.cpp  JoyConProtocol.h  Spi.cpp  Spi.h  StickUtils.cpp  StickUtils.h  Types.h
